# SimpleCalc

./: .gitignore  CMakeLists.txt
docs/: README.txt
hdrs/: simplecalc.h
libraries/: simplecalc.c  simplecalc.h
src/: main.c  simplecalc.c
